commit 59804331571d2ffccb9cb25b367833912e6a2346
Author: m1k3s <pbrane0@gmail.com>
Date:   Wed Jan 29 16:46:51 2014 -0500

    slowly reworking network code to use glib::io
    stuff.gbzadmin::on_read_data now checks Glib::IOCondition before
    reading the message buffer.

commit 9e62e708d687fdd7b6edfeaa4cce1bf6a271d9fc
Author: m1k3s <pbrane0@gmail.com>
Date:   Sun Jan 26 10:38:02 2014 -0500

    changed gSocket::connect to use a nonblocking sock for
    initial connect. Has the benefit of a timeout. Also added
    gListServer::validateIP to use instead of the test for dot[x] < 0 &&
    dot[x] > 255 in an if statement in gListServer::parseServerList.

commit 0d5aab35bf7454929b0ed7b94665ea76d3d5ea9c
Author: m1k3s <pbrane0@gmail.com>
Date:   Sat Jan 25 14:13:14 2014 -0500

    Experimenting with prefetching the login token. Currently can be
    enabled in the
    config file. Now when you query the list server the list server
    window is
    activated.

commit 11c61093d2ffbe6252098f3e6a6915a55a143cd6
Author: m1k3s <pbrane0@gmail.com>
Date:   Sat Jan 25 10:34:10 2014 -0500

    updated ChangeLog

commit 6f731d86f4859a5ce2ea2f8687dd1c2480d8cf7d
Author: m1k3s <pbrane0@gmail.com>
Date:   Fri Jan 24 17:38:54 2014 -0500

    changed playerView::get_IP to use already existing
    playerView::find_player. changed playerView sort function; if the
    scores are equal use the player id instead. This prevents equal
    score lines from jumping around.

commit 2a87a625bb8ec129c057adbba2c0914e05fa0822
Author: m1k3s <pbrane0@gmail.com>
Date:   Mon Jan 20 19:32:40 2014 -0500

    connection dialog now remembers the last server you connected to.

commit c5b29a234df0a20002f92227339186d02531d86b
Author: m1k3s <pbrane0@gmail.com>
Date:   Sun Jan 19 13:51:46 2014 -0500

    added an icon to the connect dialog server entry that when clicked
    will delete that entry. Needed a way to remove entries from the
    server MRU list.

commit 42071197e2eeb60f67592fcf9a75c36a75c5438b