@@ -40,7 +40,6 @@
 #include <cstdlib>
 
 #define APPNAME "gbzadmin3"
-#define USING_GIO_NETWORK
 
 // notebook pages
 enum {
