@@ -2094,11 +2094,7 @@ void gbzadmin::logon()
     while(Gtk::Main::events_pending()) {  // update the GUI before the connect phase
         Gtk::Main::iteration();
     }
-#ifdef USING_GIO_NETWORK
-    if (sock.connect2(_server, _port)) {
-#else
 	if (sock.connect(_server, _port)) {
-#endif
         if (sock.join(_callsign, _password, _motto)) {
             // display some server info
             Glib::ustring id_str = Glib::ustring::compose("%1", sock.getId());
